@@ -10,13 +10,15 @@
     <editor-bookmarks xmlns="http://www.netbeans.org/ns/editor-bookmarks/2" lastBookmarkId="0"/>
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
         <group>
-            <file>file:/C:/Users/Jester/Desktop/JFVGL/src/AWindow.h</file>
-            <file>file:/C:/Users/Jester/Desktop/JFVGL/Makefile</file>
-            <file>file:/C:/Users/Jester/Desktop/JFVGL/src/Main.cpp</file>
-            <file>file:/C:/Users/Jester/Desktop/JFVGL/src/Main.h</file>
-            <file>file:/C:/Users/Jester/Desktop/JFVGL/README.md</file>
-            <file>file:/C:/Users/Jester/Desktop/JFVGL/CHANGELOG</file>
-            <file>file:/C:/Users/Jester/Desktop/JFVGL/src/AWindow.cpp</file>
+            <file>file:/C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/GLUTWindow.cpp</file>
+            <file>file:/C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/Main.h</file>
+            <file>file:/C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/CHANGELOG</file>
+            <file>file:/C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/README</file>
+            <file>file:/C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/Makefile</file>
+            <file>file:/C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/Main.cpp</file>
+            <file>file:/C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/GLUTWindow.h</file>
+            <file>file:/C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/TODO</file>
+            <file>file:/C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/IWindow.h</file>
         </group>
     </open-files>
     <preferences xmlns="http://www.netbeans.org/ns/auxiliary-configuration-preferences/1">
