@@ -1,3 +1,3 @@
-#Thu Apr 25 00:29:41 EDT 2019
-project.licensePath=LICENSE
+#Thu Apr 25 02:02:57 EDT 2019
 project.license=default
+project.licensePath=LICENSE
