@@ -19,7 +19,10 @@
                 </confElem>
             </confList>
             <formatting>
-                <project-formatting-style>false</project-formatting-style>
+                <project-formatting-style>true</project-formatting-style>
+                <c-style>Default_1|Jester</c-style>
+                <cpp-style>Default_0|Jester</cpp-style>
+                <header-style>ANSI_0|Jester</header-style>
             </formatting>
         </data>
     </configuration>
